# heat-2d-schwarz

./: README.md
parallel/: CMakeLists.txt  DataFile.cpp  DataFile.h  Function.cpp  Function.h  Laplacian.cpp  Laplacian.h  MPIUtils.h  Makefile  TimeScheme.cpp  TimeScheme.h  Vector.cpp  Vector.h  main.cpp  parameters.txt
parallel/params/: parameters.txt
parallel/src/: DataFile.cpp  DataFile.h  Function.cpp  Function.h  Laplacian.cpp  Laplacian.h  TimeScheme.cpp  TimeScheme.h  main.cpp
sequential/: DataFile.cpp  DataFile.h  Function.cpp  Function.h  Laplacian.cpp  Laplacian.h  Makefile  TimeScheme.cpp  TimeScheme.h  Vector.cpp  Vector.h  main  main.cpp  parameters.txt
sequential/results/: solution_exacte_scenario_1_1.vtk  solution_scenario_1_0.vtk  solution_scenario_1_1.vtk
